# MPI_Projects

./: CMakeLists.txt  README.md
src/: common.cpp
temp/: makefile
test/: test.py  testcases
vector_add/: CMakeLists.txt  README.md
vector_add/include/: mpi_addition_pvt.h
vector_add/src/: common.cpp  main.cpp  mpi_functions.cpp
vector_mult/: CMakeLists.txt  README.md
vector_mult/include/: mpi_mult_pvt.h
vector_mult/src/: common.cpp  main.cpp  mpi_functions.cpp
